{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 152,
  "lineage": "59ba4810-cd6f-f8f8-0bd7-8019ea4cfa88",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a123353df8e77189",
            "arn": "arn:aws:ec2:eu-west-1:328933318005:instance/i-0dabd92ece5b5a4c0",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0912f039daf772cda",
                "volume_size": 200,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iEC2Core",
            "id": "i-0dabd92ece5b5a4c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-052146bc849b3976b",
            "private_dns": "ip-172-31-24-24.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:328933318005:key/4932f836-3e3d-4af6-b938-51aa4a2e5cad",
                "throughput": 125,
                "volume_id": "vol-0ab9ab1a8540f8e68",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "alb-ec2",
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b5f987d49828c20",
            "tags_all": {
              "deployment": "teraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c368070ad577c95",
              "sg-0f28707cb43919d89"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_security_group.ec2",
            "data.aws_ami.amz-linux",
            "data.aws_subnets.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:loadbalancer/app/public-alb/c1d2abbac0776817",
            "arn_suffix": "app/public-alb/c1d2abbac0776817",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-public-alb-695113269.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:loadbalancer/app/public-alb/c1d2abbac0776817",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03bacb9521bc30fa2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08b5f987d49828c20"
              },
              {
                "subnet_id": "subnet-0c76c73e2c9cba9cd"
              },
              {
                "subnet_id": "subnet-0eea9fb693c39e3ba"
              }
            ],
            "subnets": [
              "subnet-08b5f987d49828c20",
              "subnet-0c76c73e2c9cba9cd",
              "subnet-0eea9fb693c39e3ba"
            ],
            "tags_all": {
              "deployment": "teraform"
            },
            "vpc_id": "vpc-0f2a1adec896d5cc5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.main",
            "data.aws_vpcs.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:listener/app/public-alb/c1d2abbac0776817/d4682bd21d164d9b",
            "certificate_arn": "arn:aws:acm:eu-west-1:328933318005:certificate/ee9a294e-75ee-464f-9d54-0fc7400dee08",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:targetgroup/alb-tg-http/d08526d026bc5459",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:listener/app/public-alb/c1d2abbac0776817/d4682bd21d164d9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:loadbalancer/app/public-alb/c1d2abbac0776817",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "deployment": "teraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.default",
            "aws_lb.alb",
            "aws_lb_target_group.alb",
            "aws_security_group.alb",
            "data.aws_subnets.main",
            "data.aws_vpcs.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "header",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:targetgroup/alb-tg-http/d08526d026bc5459",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:listener-rule/app/public-alb/c1d2abbac0776817/d4682bd21d164d9b/0b216257bc800132",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "cloudtechnologyoffice.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:listener-rule/app/public-alb/c1d2abbac0776817/d4682bd21d164d9b/0b216257bc800132",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:listener/app/public-alb/c1d2abbac0776817/d4682bd21d164d9b",
            "priority": 1,
            "tags": {},
            "tags_all": {
              "deployment": "teraform"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.default",
            "aws_lb.alb",
            "aws_lb_listener.alb",
            "aws_lb_target_group.alb",
            "aws_security_group.alb",
            "data.aws_subnets.main",
            "data.aws_vpcs.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:targetgroup/alb-tg-http/d08526d026bc5459",
            "arn_suffix": "targetgroup/alb-tg-http/d08526d026bc5459",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:targetgroup/alb-tg-http/d08526d026bc5459",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg-http",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "deployment": "teraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f2a1adec896d5cc5"
          },
          "dependencies": [
            "data.aws_vpcs.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:targetgroup/alb-tg-http/d08526d026bc5459-20231027115023334900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:328933318005:targetgroup/alb-tg-http/d08526d026bc5459",
            "target_id": "172.31.24.24"
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.instances",
            "aws_lb_target_group.alb",
            "aws_security_group.ec2",
            "data.aws_ami.amz-linux",
            "data.aws_iam_policy.cloudwatch",
            "data.aws_iam_policy.s3_full_access",
            "data.aws_iam_policy.ssm_core",
            "data.aws_iam_policy.ssm_patch",
            "data.aws_iam_policy_document.assume_role_ec2",
            "data.aws_subnets.main",
            "data.aws_vpcs.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:328933318005:security-group/sg-03bacb9521bc30fa2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "LB out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bacb9521bc30fa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from inet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "328933318005",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "deployment": "teraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2a1adec896d5cc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:328933318005:security-group/sg-0f28707cb43919d89",
            "description": "Allow HTTP inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f28707cb43919d89",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bacb9521bc30fa2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-ec2",
            "name_prefix": "",
            "owner_id": "328933318005",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "deployment": "teraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2a1adec896d5cc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-3042012790",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f28707cb43919d89",
            "security_group_rule_id": "sgr-0e7dcd9f2b4f1ab1b",
            "self": false,
            "source_security_group_id": "sg-03bacb9521bc30fa2",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "data.aws_vpcs.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-677570376",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f28707cb43919d89",
            "security_group_rule_id": "sgr-0b52081d745da0623",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "data.aws_vpcs.main"
          ]
        }
      ]
    }
  ]
}